# ark-wallet

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AUDIT.md  README.md  ROADMAP.md  build-android.sh  index.html  package-lock.json  package.json  tapd-defaults.example.json
.githooks/: pre-commit
.github/workflows/: android-release.yml  android.yml  ci.yml  secret-scan.yml
.planning/: state.md
docs/: SECURITY.md  TESTING-ARK-EXIT.md  USER-GUIDE.md  tapd-umbrel-setup.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tapd_defaults.rs
src-tauri/src/ark/: arkade_address.rs  config.rs  mod.rs  service.rs
src-tauri/src/backup/: crypto.rs
src-tauri/src/onchain/: mod.rs  wallet.rs
src-tauri/src/taproot/: client.rs  mod.rs
src-tauri/src/tor/: config.rs  connector.rs  mod.rs  service.rs
src-tauri/src/wallet/: mod.rs  seed.rs  vault.rs
src/components/: ConfirmModal.tsx  ErrorBoundary.tsx  MainnetBanner.tsx  Notification.tsx  PasswordPrompt.tsx  QRImage.tsx
src/contexts/: NotificationContext.tsx
src/i18n/: I18nContext.tsx  strings.ts
src/lib/: nfc.ts  scan.ts
src/screens/: Ark.tsx  BackupWallet.tsx  CreateWallet.tsx  Dashboard.tsx  History.tsx  ImportWallet.tsx  Lightning.tsx  TaprootAssets.tsx  UnlockWallet.tsx  Welcome.tsx
src/styles/: theme.css
